# nexus

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  base.gradle  base.gradle.kts  build.gradle  build.gradle.kts  go.mod  go.sum  libs.gradle.kts  logging.gradle.kts  main.go  properties.gradle  settings.gradle  settings.gradle.kts  ui.gradle.kts
AdminServer/AdminServerAddon/: build.gradle
AdminServer/AdminServerApiClient/: build.gradle
AdminServer/AdminServerBackend/: build.gradle
AdminServer/AdminServerFrontend/: .angular-cli.json  build.gradle  package-lock.json  package.json
AdminServer/AdminServerWebapp/: build.gradle
AppCore/: build.gradle
AppCore/Sources/: module-info.java
AppUpdater/: build.gradle  build.gradle.kts
BotManager/: build.gradle  build.gradle.kts
Deployment/: docker-compose.yml
FilelistCreator/: build.gradle  build.gradle.kts
Foundation/: build.gradle
HomeServer/: build.gradle
LoginServer/: build.gradle
QAAccountManager/: build.gradle  build.gradle.kts
SHA1Pass/: build.gradle  build.gradle.kts
api/: highscore.go  ranking.go
assistantApp/: .gitignore  README.md  build.gradle
config/: build.gradle
core/: build.gradle  build.gradle.kts
deployments/: docker-compose.yml
homeassistantApp/: build.gradle
impl/: build.gradle  build.gradle.kts
projects/learning/school/cpp/: CMakeLists.txt  main.cpp
projects/learning/school/cpp/Chapter1/: CMakeLists.txt  Speaker.cpp  Speaker.h
redditApp/: build.gradle
sha1passApp/: README.md  build.gradle
shoppingApp/: README.md  build.gradle
tools/: Makefile
(+2718 files in other folders)
